# kickstart.nvim

./: init.lua
c_templates/: filter.c
lua/clangd/: CMakeLists.txt
lua/snippets/: init.lua  snippets-example.lua  snippets.lua
templates/: .nvim.yaml
